Fix overlapping content on very narrow screens

--- a/css/style.css
+++ b/css/style.css
@@ -319,3 +319,9 @@ but since we offset by a bunch depending on resolution, this can't be fixed
         top: calc(1810 / 1440 * 100vw - 45vw);
     }
 }
+
+@media only screen and (max-width: 480px) {
+    #content {
+        top: 600px;
+    }
+}
